--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -7493,17 +7493,17 @@
 				<p><i>2. Avec les particules.</i></p>
 				<div id="section-351" class="section" data-section-no="351">
 					<p><em>ⲓⲥ</em> et <em>ϩⲏⲡⲡⲉ</em>.</p>
-					<p>1. <em>ⲓⲥ</em> (Ṣ. <em>ⲉⲓⲥ</em>) «voici que» sert surtout à mettre en relief le sujet et le régime:</p>
+					<p><b>1.</b> <em>ⲓⲥ</em> (Ṣ. <em>ⲉⲓⲥ</em>) «voici que» sert surtout à mettre en relief le sujet et le régime:</p>
 					<p><em>ⲓⲥ ⲫⲏ ⲉⲑⲟⲩⲁⲃ ⲁϥⲕⲱⲗϩ ⲉⲡⲓⲣⲟ</em> «voici que le saint frappe à la porte»<sup class="footnote">1</sup>.</p>
 					<p><em>ⲓⲥ ⲣⲉⲃⲉⲕⲕⲁ ⲛⲁⲥⲛⲏⲟⲩ ⲉⲃⲟⲗ ⲉⲣⲉ ⲧⲉⲥϩⲩⲇⲣⲓⲁ ϩⲓ ⲧⲉⲥⲛⲁϩⲃⲓ</em> «voici que Rébecca venait, sa jarre sur l'épaule»<sup class="footnote">2</sup>.</p>
-					<p>2. Il est très souvent précédé de <em>ϩⲏⲡⲡⲉ</em> qui ajoute plus d'intensité au sens:</p>
+					<p><b>2.</b> Il est très souvent précédé de <em>ϩⲏⲡⲡⲉ</em> qui ajoute plus d'intensité au sens:</p>
 					<p><em>ϩⲏⲡⲡⲉ ⲓⲥ ⲡⲓⲥⲟⲓ ϥⲭⲏ ϧⲉⲛ ⲡⲉⲕⲃⲁⲗ</em> «voici que la poutre est dans ton œil»<sup class="footnote">3</sup>.</p>
 					<p><em>ϩⲏⲡⲡⲉ ⲓⲥ ⲧⲁⲓⲕⲟⲩϫⲓ ⲙ̀ⲃⲁⲕⲓ ⲥϧⲉⲛⲧ</em> «voici que cette petite ville est proche»<sup class="footnote">4</sup>.</p>
-					<p>3. <em>ϩⲏⲡⲡⲉ</em> (Ṣ. <em>ϩⲏⲏⲧⲉ</em>) est parfois employé seul; il peut être suivi d'un mot mis en relief ou du verbe lui-même avec ou sans prolepse:</p>
+					<p><b>3.</b> <em>ϩⲏⲡⲡⲉ</em> (Ṣ. <em>ϩⲏⲏⲧⲉ</em>) est parfois employé seul; il peut être suivi d'un mot mis en relief ou du verbe lui-même avec ou sans prolepse:</p>
 					<p><em>ϩⲏⲡⲡⲉ ⲁⲛⲟⲕ ϯⲛⲁⲑⲣⲉ ⲡϩⲏⲧ ⲙ̀ⲫⲁⲣⲁⲱ ⲛ̀ϣⲟⲧ</em> «voici que j'endurcirai le cœur de Pharaon»<sup class="footnote">5</sup>.</p>
 					<p><em>ϩⲏⲡⲡⲉ ⲁϥⲙⲟⲩϯ ⲛ̀ϫⲉ ⲫϯ</em> «voici que Dieu a appelé»<sup class="footnote">6</sup>.</p>
 					<p><em>ϩⲏⲡⲡⲉ ⲁⲓⲉⲣϣⲫⲏⲣⲓ ⲙ̀ⲡⲉⲕϩⲟ</em> «voici que je t'ai admiré»<sup class="footnote">7</sup>.</p>
-					<p>4. Lorsque <em>ⲓⲥ</em> précède <em>ϩⲏⲡⲡⲉ</em>, la prolepse du nom n'a pas lieu; <em>ⲓⲥ ϩⲏⲡⲡⲉ</em> doit être suivi d'un verbe:</p>
+					<p><b>4.</b> Lorsque <em>ⲓⲥ</em> précède <em>ϩⲏⲡⲡⲉ</em>, la prolepse du nom n'a pas lieu; <em>ⲓⲥ ϩⲏⲡⲡⲉ</em> doit être suivi d'un verbe:</p>
 					<p><em>ⲓⲥ ϩⲏⲡⲡⲉ ϯⲛⲁϣⲉ ⲛⲏⲓ</em> «voici que je m'en irai»<sup class="footnote">8</sup>.</p>
 					<p><em>ⲓⲥ ϩⲏⲡⲡⲉ ⲁⲓⲧⲁⲙⲟⲕ ⲉ ⲛⲏ ⲧⲏⲣⲟⲩ ⲉⲧ ϧⲉⲛ ⲡⲁϩⲏⲧ</em> «voici que je t'ai informé de tout ce qu'il y a dans mon cœur» <sup class="footnote">9</sup>.</p>
 					<p class="footnote">1. MS. 423.</p>
@@ -7524,14 +7524,14 @@
 					<p><em>ⲓⲥ ⲟⲩⲙⲏϣ ⲛ̀ⲉϩⲟⲟⲩ ϯⲥⲟⲙⲥ ⲉⲃⲟⲗ</em> «voici plusieurs jours que je considère»<sup class="footnote">3</sup>.</p>
 					<p><em>ⲓⲥ ⲟⲩⲏⲣ ⲛ̀ⲣⲟⲙⲡⲓ ⲓⲥϫⲉⲛ ⲉⲧⲁⲕⲙⲟⲩ</em> «combien y a-t-il d'années que tu es mort?<sup class="footnote">4</sup>.</p>
 				</div>
-				<p>III. Accord des éléments.</p>
+<p><b>III.</b> Accord des éléments.</p>
 				<div id="section-353" class="section" data-section-no="353">
 					<p>L'accord se fait en copte d'après les règles générales; il n'y a à noter que le cas où le sujet est un <i>collectif</i> singulier:</p>
-					<p>1. Parfois le verbe se met au pluriel et l'épithète reste au sing.:</p>
+					<p><b>1.</b> Parfois le verbe se met au pluriel et l'épithète reste au sing.:</p>
 					<p><em>ⲟⲩⲛⲓϣϯ ⲙ̀ⲙⲏϣ ⲉϥⲙⲟϫⲧ ⲁⲩϣⲉ ⲉⲡϣⲱⲓ</em> «une foule nombreuse et mêlée monta»<sup class="footnote">5</sup>.</p>
-					<p>2. Lorsqu'il y a deux verbes et qu'ils sont séparés par le collectif, on peut avoir le premier au sing. et le second au plur.:</p>
+					<p><b>2.</b> Lorsqu'il y a deux verbes et qu'ils sont séparés par le collectif, on peut avoir le premier au sing. et le second au plur.:</p>
 					<p><em>ⲉⲧⲁϥⲉⲣϩⲟϯ ⲇⲉ ⲛ̀ϫⲉ ⲡⲓⲗⲁⲟⲥ ⲧⲏⲣϥ ⲁⲩⲟϩⲓ ⲉⲣⲁⲧⲟⲩ</em> «après avoir été saisi de crainte, tout le peuple se tint debout»<sup class="footnote">6</sup>.</p>
-					<p>3. Enfin l'épithète peut être au pluriel et le verbe au singulier:</p>
+					<p><b>3.</b> Enfin l'épithète peut être au pluriel et le verbe au singulier:</p>
 					<p><em>ⲉϥⲉⲛⲁⲩ ⲛ̀ϫⲉ ⲡⲓⲗⲁⲟⲥ ⲛⲏ ⲛ̀ⲑⲟⲕ ⲉⲧⲉⲕⲛ̀ϧⲏⲧⲟⲩ</em> «il verra, le peuple au milieu duquel tu habites»<sup class="footnote">7</sup>.</p>
 					<p class="footnote">1. C. 119, 25.</p>
 					<p class="footnote">2. MS. 423.</p>
@@ -7541,18 +7541,18 @@
 					<p class="footnote">6. Ex. 20, 18.</p>
 					<p class="footnote">7. Ex. 34, 10 (cf. AB, p. 9).</p>
 				</div>
-				<p>Chapitre XVII.</p>
+				<h5>Chapitre XVII.</h5>
 				<p>Proposition Nominale.</p>
-				<p>I. Proposition nominale simple.</p>
+				<h6>I. Proposition nominale simple.</h6>
 				<div id="section-354" class="section" data-section-no="354">
 					<p>La proposition nominale simple est celle qui ne contient pas de verbe, mais seulement un sujet et un prédicat. Le sujet est un nom ou un pronom; le prédicat, un substantif, un adjectif ou une construction prépositive (<em class="ar">جار ومجرور</em>).</p>
 					<p>Elle énonce une assertion générale avec le sens du présent.</p>
 					<p>Elle s'emploie dans deux cas:</p>
-					<p>1. Lorsque le sujet est un nom et le prédicat une construction prépositive:</p>
+					<p><b>1.</b> Lorsque le sujet est un nom et le prédicat une construction prépositive:</p>
 					<p><em>ⲡⲁⲓⲱⲧ ⲛ̀ϧⲏⲧ</em> «mon père (est) en moi»<sup class="footnote">1</sup>.</p>
 					<p><em>ⲡⲁⲙ̀ⲕⲁϩ ⲙ̀ⲡⲁⲙ̀ⲑⲟ ⲉⲃⲟⲗ ⲛ̀ⲥⲏⲟⲩ ⲛⲓⲃⲉⲛ</em> «ma douleur est devant moi en tout temps»<sup class="footnote">2</sup>.</p>
 					<p>C'est exactement la construction du premier présent (232, 3; 236, dernier exemple); la proposition est réellement nominale, car elle ne contient pas de verbe. Il en est de même lorsque le sujet est un des pronoms sujets du premier présent.</p>
-					<p>2. Quand le sujet est un pronom personnel absolu, et le prédicat, un nom, un adjectif ou une construction prépositive formée surtout de <em>ⲉⲃⲟⲗ ϧⲉⲛ</em>.</p>
+					<p><b>2.</b> Quand le sujet est un pronom personnel absolu, et le prédicat, un nom, un adjectif ou une construction prépositive formée surtout de <em>ⲉⲃⲟⲗ ϧⲉⲛ</em>.</p>
 					<p class="footnote">1. Jean 14, 10.</p>
 					<p class="footnote">2. Ps. 37, 15.</p>
 				</div>
@@ -7565,7 +7565,7 @@
 					<p><em>ⲁⲛⲟⲕ ⲟⲩ ⲉⲃⲟⲗ ϧⲉⲛ ϯⲡⲟⲗⲓⲥ ⲉⲣⲙⲁⲛⲧ</em> «je suis de la ville d'Erment»<sup class="footnote">5</sup>.</p>
 					<p>Dans ces sortes de propositions, on exprime souvent la copule <em>ⲡⲉ</em> <em>ⲧⲉ</em> <em>ⲛⲉ</em>; on doit l'exprimer lorsque le pronom est de la 3<sup>e</sup> pers. (360) (cf. AB, p. 23–25).</p>
 				</div>
-				<p>II. Proposition nominale avec <em>ⲡⲉ</em> <em>ⲧⲉ</em> <em>ⲛⲉ</em>.</p>
+				<h6>II. Proposition nominale avec <em>ⲡⲉ</em> <em>ⲧⲉ</em> <em>ⲛⲉ</em>.</h6>
 				<div id="section-356" class="section" data-section-no="356">
 					<p>Ces trois mots sont invariables et ne diffèrent qu'en genre et en nombre:</p>
 					<p><i>sing. masc.</i> <em>ⲡⲉ</em> <em class="ar">هو</em>,</p>
@@ -7598,8 +7598,8 @@
 				</div>
 				<div id="section-359" class="section" data-section-no="359">
 					<p>II. La proposition contient le prédicat, la copule <em>ⲡⲉ</em> <em>ⲧⲉ</em> <em>ⲛⲉ</em> et le nom qui est sujet réel:</p>
-					<p><em>ⲟⲩⲁⲅⲁⲑⲟⲥ ⲡⲉ ⲡϭⲟⲓⲥ</em> «le Seigneur est bon<em class="ar">صالح هو الرب</em>».</p>
-					<p><em>ⲡϭⲟⲓⲥ</em> qui, dans la pensée, est le sujet réel, rempit dans la phrase la fonction d' <i>apposition</i> (<em class="ar">بدل</em>) au sujet grammatical <em>ⲡⲉ</em>.</p>
+					<p><em>ⲟⲩⲁⲅⲁⲑⲟⲥ ⲡⲉ ⲡϭⲟⲓⲥ</em> «le Seigneur est bon <em class="ar">صالح هو الرب</em>».</p>
+					<p><em>ⲡϭⲟⲓⲥ</em> qui, dans la pensée, est le sujet réel, rempit dans la phrase la fonction d'<i>apposition</i> (<em class="ar">بدل</em>) au sujet grammatical <em>ⲡⲉ</em>.</p>
 					<p class="footnote">1. Jean 8, 28.</p>
 					<p class="footnote">2. Gen. 37, 27.</p>
 					<p class="footnote">3. Jean 9, 2.</p>
@@ -7631,8 +7631,8 @@
 					<p class="footnote">7. Ex. 18, 11.</p>
 					<p class="footnote">8. Ps. 144, 8.</p>
 					<p class="footnote">9. G. 23.</p>
-					<p><i>Règles de l'accord.</i></p>
 				</div>
+				<p><i>Règles de l'accord.</i></p>
 				<div id="section-361" class="section" data-section-no="361">
 					<p>1. Les règles de l'accord ne sont bien appliquées que lorsque le prédicat est un pronom de la 3<sup>e</sup> pers. (5) (6); quand c'est un pronom de la 1<sup>re</sup> ou de la 2<sup>e</sup> pers. sing. ou plur. (8), on emploie généralement <em>ⲡⲉ</em>.</p>
 					<p>(8) <em>ⲁⲛⲟⲛ ⲅⲁⲣ ⲡⲉ ⲡⲓⲉⲣⲫⲉⲓ ⲛ̀ⲧⲉ ⲫϯ</em> «car nous sommes le temple de Dieu»<sup class="footnote">1</sup>.</p>
