--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -27,55 +27,73 @@
 		</div>
 		<div id="toc">
 			<h1>Table des matières.</h1>
-			<h2>Grammaire.</h2>
-			<p>Introduction: la langue copte.</p>
-			<ol class="decimal">
-				<li><a href="#phonetique">Phonétique <span>7–23</span></a>
-					<ol class="lower-latin">
-						<li><a href="#phonetique_a">Alphabet. <span>7</span></a></li>
-						<li><a href="#phonetique_b">Valeur et prononciation des lettres. <span>8–11</span></a>
-							<ol class="decimal">
-								<li><a href="#phonetique_b_1">Consonnes. <span>8</span></a></li>
-								<li><a href="#phonetique_b_2">Voyelles et diphtongues. <span>10</span></a></li>
-							</ol>
-						</li>
-						<li><a href="#phonetique_c">Des syllabes. <span>11–16</span></a>
-							<ol class="upper-roman">
-								<li><a href="#phonetique_c_i">Des syllabes en elles-mêmes. <span>12</span></a></li>
-								<li><a href="#phonetique_c_ii">Des syllabes dans les mots. <span>12</span></a></li>
-								<li><a href="#phonetique_c_iii">Nature et quantité de la voyelle formative et des voyelles auxiliaires. <span>14</span></a>
+			<ul>
+				<li><a href="#grammaire">Grammaire. <span></span></a>
+					<ul>
+						<li><a href="#intro">Introduction: la langue copte. <span></span></a></li>
+						<li><a href="#phonetique">Phonétique. <span>7–23</span></a>
+							<ol>
+								<li><a href="#alphabet">Alphabet. <span>7</span></a></li>
+								<li><a href="#prononciation">Valeur et prononciation des lettres. <span>8–11</span></a>
 									<ol>
-										<li><a href="#phonetique_c_iii_1">Voyelle formative. <span>14</span></a></li>
-										<li><a href="#phonetique_c_iii_2">Voyelles auxiliaires. <span>15</span></a></li>
+										<li><a href="#consonnes">Consonnes. <span>8</span></a></li>
+										<li><a href="#voyelles">Voyelles et diphtongues. <span>10</span></a></li>
 									</ol>
 								</li>
-							</ol>
-						</li>
-						<li><a href="#phonetique_d">Changements de lettres. <span>16–20</span></a>
-							<ol class="upper-roman">
-								<li><a href="#phonetique_d_i">Consonnes. <span>16–18</span></a>
-									<ol class="decimal">
-										<li><a href="#phonetique_d_i_1">Chute de consonnes finales. <span>16</span></a></li>
-										<li><a href="#phonetique_d_i_2">Changements de consonnes. <span>17</span></a></li>
+								<li><a href="#syllabes">Des syllabes. <span>11–16</span></a>
+									<ol>
+										<li><a href="#en_elles_memes">Des syllabes en elles-mêmes. <span>12</span></a></li>
+										<li><a href="#dans les mots">Des syllabes dans les mots. <span>12</span></a></li>
+										<li><a href="#nature_et_quantite">Nature et quantité de la voyelle formative et des voyelles auxiliaires. <span>14</span></a>
+											<ol>
+												<li><a href="#voyelle_formative">Voyelle formative. <span>14</span></a></li>
+												<li><a href="#voyelles_auxiliaires">Voyelles auxiliaires. <span>15</span></a></li>
+											</ol>
+										</li>
 									</ol>
 								</li>
-								<li><a href="#phonetique_d_ii">Voyelles. <span>18–20</span></a>
-									<ol class="decimal">
-										<li><a href="#phonetique_d_ii_1">Sous l'influence d'une consonne qui précède. <span>18</span></a></li>
-										<li><a href="#phonetique_d_ii_2">Sous l'influence d'une lettre qui suit. <span>19</span></a></li>
+								<li><a href="#changements_de_lettres">Changements de lettres. <span>16–20</span></a>
+									<ol>
+										<li><a href="#">Consonnes. <span>16–18</span></a>
+											<ol>
+												<li><a href="#">Chute de consonnes finales. <span>16</span></a></li>
+												<li><a href="#">Changements de consonnes. <span>17</span></a></li>
+											</ol>
+										</li>
+										<li><a href="#">Voyelles. <span>18–20</span></a>
+											<ol>
+												<li><a href="#consonne_qui_precede">Sous l'influence d'une consonne qui précède. <span>18</span></a></li>
+												<li><a href="#lettre_qui_suit">Sous l'influence d'une lettre qui suit. <span>19</span></a></li>
+											</ol>
+										</li>
 									</ol>
 								</li>
+								<li><a href="#etats_et_formes">Des trois états et des trois formes. <span>20–22</span></a>
+									<ol>
+										<li><a href="#">Définitions. <span>20</span></a></li>
+										<li><a href="#">Importance. <span>21</span></a></li>
+									</ol>
+								</li>
+								<li><a href="#abreviations">Abréviations usuelles. <span>22–23</span></a></li>
 							</ol>
 						</li>
-						<li><a href="#phonetique_e">Des trois états et des trois formes. <span>20–22</span></a>
-							<ol class="upper-roman">
-								<li><a href="#phonetique_e_i">Définitions. <span>20</span></a></li>
-								<li><a href="#phonetique_e_ii">Importance. <span>21</span></a></li>
-							</ol>
-						</li>
-						<li><a href="#phonetique_f">Abréviations usuelles. <span>22–23</span></a></li>
-					</ol>
+						<li>Tableau des Verbes. <span>204–223</span></li>
+						<li>Liste des abréviations. <span>224</span></li>
+						<li>Chiffres cursifs.</li>
+						<li>Abrégé de la grammaire ṣaꜥìdique. <span>225–236</span></li>
+						<li>Petit exercice. <span>237–243</span></li>
+					</ul>
 				</li>
+				<li><a href="#bibliographie">Bibliographie. <span></span></a></li>
+				<li><a href="#chrestomathie">Chrestomathie. <span></span></a></li>
+				<li><a href="#vocabulaire_saidique">Vocabulaire ṣaꜥìdique. <span></span></a></li>
+				<li><a href="#vocabulaire_bohairique">Vocabulaire boḥairique. <span></span></a></li>
+				<li><a href="#liste_de_textes">Liste des textes. <span></span></a></li>
+			</ul>
+			
+
+			<ol class="decimal">
+				
 				<li>Morphologie et syntaxe.
 					<ol class="upper-roman">
 						<li><i>Articles et pronoms.</i>
@@ -392,18 +410,6 @@
 					</ol>
 				</li>
 			</ol>
-			<ul>
-				<li>Tableau des Verbes. <span>204–223</span></li>
-				<li>Liste des abréviations. <span>224</span></li>
-				<li>Chiffres cursifs.</li>
-				<li>Abrégé de la grammaire ṣaꜥìdique. <span>225–236</span></li>
-				<li>Petit exercice. <span>237–243</span></li>
-				<li>Bibliographie.</li>
-				<li>Chrestomathie.</li>
-				<li>Vocabulaire ṣaꜥìdique.</li>
-				<li>Vocabulaire boḥairique.</li>
-				<li>Liste des textes.</li>
-			</ul>
 		</div>
 		<div id="abreviations_conventionnelles">
 			<h2>Abréviations Conventionnelles.</h2>
@@ -16731,6 +16737,9 @@
 					<td><em></em></td><td></td><td></td>
 				</tr>
 			</table>
+		</div>
+		<div id="vocabulaire_bohairique">
+			
 		</div>
 		<div id="liste_de_textes">
 			<h2>Liste des Textes.</h2>
