--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -74,7 +74,7 @@
 										<li><a href="#">Importance. <span>21</span></a></li>
 									</ol>
 								</li>
-								<li><a href="#abreviations">Abréviations usuelles. <span>22–23</span></a></li>
+								<li><a href="#abreviations_usuelles">Abréviations usuelles. <span>22–23</span></a></li>
 							</ol>
 						</li>
 						<li>Tableau des Verbes. <span>204–223</span></li>
@@ -484,7 +484,7 @@
 			</div>
 			<div id="phonology">
 				<h3 id="phonetique">1. Phonétique.</h3>
-				<h4 id="phonetique_a">A. Alphabet.</h4>
+				<h4 id="alphabet">A. Alphabet.</h4>
 				<div id="section-001" class="section" data-section-no="1">
 					<p>L'alphabet copte comprend les vingt-quatre lettres de l'alphabet grec, plus sept lettres égyptiennes.</p>
 					<div class="header_row">
@@ -492,7 +492,7 @@
 						<div>Nom</div>
 						<div>Valeur</div>
 					</div>
-					<div id="alphabet">
+					<div id="">
 						<div>
 							<div><em>Ⲁ</em> <em>ⲁ</em></div>
 							<div>alpha</div>
@@ -659,8 +659,8 @@
 					<p>Quelquefois aussi les lettres <em>ⲑ</em> <em>ⲫ</em> <em>ⲭ</em> remplacent <em>ⲧϩ</em>, <em>ⲡϩ</em>, <em>ⲕϩ</em> par ex. <em>ⲑⲉⲙⲥⲟ</em> = <em>ⲧϩⲉⲙⲥⲟ</em>. Mais généralement ce sont des lettres simples en boḥairique.</p>
 					<p>Les lettres <em>ⲓ</em> et <em>ⲟⲩ</em> peuvent être de simples voyelles comme en arabe <em class="ar">ﹺ</em> et <em class="ar">ﹸ</em> ou bien les semi-consonnes y (<em class="ar">ي</em>), w (<em class="ar">و</em>). Dans ce dernier cas, on les appelle aussi, comme en arabe, lettres faibles.</p>
 				</div>
-				<h4 id="phonetique_b">B. Valeur et Prononciation des Letters.</h4>
-				<h5 id="phonetique_b_1">1. Consonnes.</h5>
+				<h4 id="prononciation">B. Valeur et Prononciation des Letters.</h4>
+				<h5 id="consonnes">1. Consonnes.</h5>
 				<p>Les consonnes coptes peuvent se diviser en:</p>
 				<ol>
 					<li>Labiales <em>ⲃ</em> <em>ⲛ</em> <em>ⲫ</em> <em>ϥ</em>.</li>
@@ -695,7 +695,7 @@
 					<p><em>ϫ</em> = <i>dj</i>; cependant quelques Coptes le traitent comme <em class="ar">ج</em> arabe et le prononcent <i>g</i> dur.</p>
 					<p>Les liquides ont en copte la valeur habituelle.</p>
 				</div>
-				<h5 id="phonetique_b_2">2. Voyelles et Diphtongues.</h5>
+				<h5 id="voyelles">2. Voyelles et Diphtongues.</h5>
 				<div id="section-009" class="section" data-section-no="9">
 					<p>Il y a en copte sept voyelles:</p>
 					<p>trois brèves: <em>ⲁ</em> <em>ⲉ</em> <em>ⲟ</em></p>
@@ -727,16 +727,16 @@
 					<p><em>ⲏ</em> et <em>ⲟⲓ</em> se prononcent aussi <em>ⲓ</em>. Il y a donc cinq manières différentes de représenter le son <i>i</i>: <em>ⲉⲓ</em> <em>ⲟⲓ</em> <em>ⲏ</em> <em>ⲓ</em> <em>ⲩ</em>, d'où il est résulté l'inconvénient que ces lettres ont été souvent remplacées les unes par les autres dans l'écriture.</p>
 					<p>Au commencement des mots grecs, les voyelles, qu'elles aient l'esprit doux ou l'esprit rude, prennent souvent l'aspirée douce <em>ϩ</em>. Ceci a lieu surtout pour la voyelle <i>i</i>, de quelque manière qu'elle soit écrite: <em>ϩⲓⲛⲁ</em> = <em class="gr">ἵνα</em>, <em>ϩⲓⲣⲏⲛⲏ</em> = <em class="gr">εἰρήνη</em>.</p>
 				</div>
-				<h4 id="phonetique_c">C. Des Syllabes.</h4>
+				<h4 id="syllabes">C. Des Syllabes.</h4>
 				<p><i>Remarque.</i></p>
 				<p>Dans la phonétique en général et la théorie des syllabes, on peut considérer le copte en lui-même ou bien dans ses rapports avec l'égyptien. Cette seconde méthode serait sans doute féconde et instructive, mais elle exigerait des développements qui sortent du cadre de ce manuel. Elle supposerait en outre que la phonétique égyptienne est établie sur des principes certains et fixée par des règles précises. Or il n'en est rien. La science égyptologique est encore bien hésitante à ce sujet. Il nous semble donc préférable de nous limiter à l'étude du copte en lui-même. Nous indiquerons cependant quelques considérations ayant trait aux rapports de l'égyptien et du copte. Ces considérations semblent être admises par tous les Egyptologues et sont nécessaires pour l'intelligence de la morphologie copte.</p>
-				<h5 id="phonetique_c_i">I. Des syllabes en elles-mêmes.</h5>
+				<h5 id="en_elles_memes">I. Des syllabes en elles-mêmes.</h5>
 				<div id="section-012" class="section" data-section-no="12">
 					<p>Il y a en copte deux espèces de syllabes: la syllabe <i>ouverte</i> et la syllabe <i>fermée</i>.</p>
 					<p>La syllabe ouverte est celle qui est terminée par une voyelle: <em>ⲥⲱ</em> «boire», <em>ⲙⲁ</em> «lieu», <em>ⲥⲱ-ⲛⲓ</em> «sœur»; la syllabe fermée, celle qui est terminée par une consonne: <em>ⲥⲟⲡ</em> «fois», <em>ⲉⲣ</em> «faire», <em>ⲥⲟⲗ-ⲥⲉⲗ</em> «consoler».</p>
 					<p>Il peut y avoir en copte des syllabes ouvertes qui en égyptien étaient fermées, ou inversement, des syllabes fermées qui en égyptien étaient ouvertes. Elles seront considérées telles qu'elles sont en copte.</p>
 				</div>
-				<h5 id="phonetique_c_ii">II. Des syllabes dans les mots.<br>Accent tonique.</h5>
+				<h5 id="dans_les_mots">II. Des syllabes dans les mots.<br>Accent tonique.</h5>
 				<div id="section-013" class="section" data-section-no="13">
 					<p>Parmi les voyelles d'un même mot, il en est une principale qui lui donne sa forme particulière et reçoit l'accent tonique, nous l'appellerons voyelle <i>formative</i>:</p>
 					<p><em>ⲣⲱ́ⲙⲓ</em> «homme», <em>ⲥⲟ́ⲗⲥⲉⲗ</em> «consoler», <em>ϣⲫⲏ́ⲣⲓ</em> «merveille», <em>ⲛⲟⲩ́ϯ</em> «Dieu». Dans chacun de ces mots, la voyelle marquée de l'accent est la voyelle <i>formative</i>.</p>
@@ -763,8 +763,8 @@
 					<p><em>ⲁϥ-ⲥⲟ́ⲗⲥⲉⲗ</em> il a consolé,</p>
 					<p><em>ⲁϥ-ⲥⲉⲗⲥⲉⲗ-ⲡⲉϥ-ⲥⲟ́ⲛ</em> il a consolé son frère.</p>
 				</div>
-				<h5 id="phonetique_c_iii">III. Nature et quantité de la voyelle formative et des voyelles auxiliaires.</h5>
-				<h6 id="phonetique_c_iii_1">1. Voyelle formative.</h6>
+				<h5 id="nature_et_quantitie">III. Nature et quantité de la voyelle formative et des voyelles auxiliaires.</h5>
+				<h6 id="voyelle_formative">1. Voyelle formative.</h6>
 				<div id="section-016" class="section" data-section-no="16">
 					<p>En règle générale la voyelle formative est longue dans les syllabes ouvertes et brève dans les syllabes fermées:</p>
 					<p><em>ⲥⲱ́-ⲧⲉⲙ</em> «entendre», <em>ϣⲏ́-ⲣⲓ</em> «fils»; <em>ⲣⲁ́ⲛ</em> «nom», <em>ⲥⲟ́ⲗ-ⲥⲉⲗ</em>.</p>
@@ -797,7 +797,7 @@
 					<p><em>ⲛⲉ-ⲙⲁ́ⲕ</em> avec toi, <em>ⲛⲉ-ⲙⲱ́-ⲧⲉⲛ</em> avec vous;</p>
 					<p><em>ⲉ-ⲣⲟ́ⲕ</em> vers toi, <em>ⲉ-ⲣⲱ́-ⲧⲉⲛ</em> vers vous.</p>
 				</div>
-				<h6 id="phonetique_c_iii_2">2. Voyelles auxiliaires.</h6>
+				<h6 id="voyelles_auxiliaires">2. Voyelles auxiliaires.</h6>
 				<div id="section-019" class="section" data-section-no="19">
 					<p>1. En règle générale, les voyelles auxiliaires, qu'elles soient dans une syllabe ouverte ou fermée, sont, <em>ⲉ</em> à l'intérieur des mots, <em>ⲓ</em> (S. <em>ⲉ</em>) à la fin:</p>
 					<p><em>ⲁϥ-ⲥⲉⲗⲥⲉⲗ-ⲡⲉϥ-ⲥⲟ́ⲛ</em> «il a consolé son frère».</p>
@@ -814,9 +814,9 @@
 					<p><em>ⲡⲓⲣⲱⲙⲓ ⲉⲧⲉⲛϩⲟⲧ</em> «l'homme fidèle».</p>
 					<p>En Ṣaꜥidique la voyelle auxiliaire <em>ⲉ</em> est le plus souvent indiquée par un trait horizontal: <em>ⲙ̄ⲕⲁϩ</em>, <em>ⲛ̄ϩⲟⲧ</em>.</p>
 				</div>
-				<h4 id="phonetique_d">D. Changements de Lettres.</h4>
-				<h5 id="phonetique_d_i">I. Consonnes.</h5>
-				<h6 id="phonetique_d_i_1">1. Chute de consonnes finales.</h6>
+				<h4 id="changements">D. Changements de Lettres.</h4>
+				<h5 id="">I. Consonnes.</h5>
+				<h6 id="">1. Chute de consonnes finales.</h6>
 				<div id="section-021" class="section" data-section-no="21">
 					<p>1. <i>r</i> final dans un mot égyptien a généralement disparu en copte. Les mots terminés en <i>ir</i> ou <i>er</i> présentent la finale <em>ⲓ</em> (S. <em>ⲉ</em>), et ceux en <i>or</i> la finale <em>ⲟ</em>:</p>
 					<p><em>ⲛⲟⲩϥⲓ</em> ég. <i>noúfir</i>,</p>
@@ -843,7 +843,7 @@
 					<p><em>ⲣⲟⲙⲡⲓ</em> ég. <i>rónpit</i>,</p>
 					<p><em>ⲫⲏⲟⲩⲓ</em> ég. <i>pḗwit</i>, pluriel de <em>ⲫⲉ</em> «ciel».</p>
 				</div>
-				<h6 id="phonetique_d_i_2">2. Changements de consonnes.</h6>
+				<h6 id="">2. Changements de consonnes.</h6>
 				<div id="section-023" class="section" data-section-no="23">
 					<p>1. Devant les consonnes <em>ⲃ</em> <em>ⲗ</em> <em>ⲙ</em> <em>ⲛ</em> <em>ⲣ</em> et les semi-consonnés <em>ⲓ</em> <em>ⲟⲩ</em>, les trois fortes <em>ⲡ</em> <em>ⲕ</em> <em>ⲧ</em> se changent en leurs aspirées correspondantes <em>ⲫ</em> <em>ⲭ</em> <em>ⲑ</em>:</p>
 					<p><em>ⲫⲣⲏ</em> «le soleil» = <em>ⲡ</em> article + <em>ⲣⲏ</em>;</p>
@@ -882,8 +882,8 @@
 					<p>6. Dans quelques mots on ajoute parfois un <em>ϩ</em> final sans changement de sens:</p>
 					<p><em>ϫⲱⲗ</em> <em>ϫⲱⲗϩ</em> «revêtir»; <em>ϭⲟ</em> <em>ϭⲟϩ</em> «dépenser».</p>
 				</div>
-				<h5 id="phonetique_d_ii">II. Changements de voyelles.</h5>
-				<h6 id="phonetique_d_ii_1">1. Sous l'influence d'une consonne qui précède.</h6>
+				<h5 id="">II. Changements de voyelles.</h5>
+				<h6 id="consonne_qui_precede">1. Sous l'influence d'une consonne qui précède.</h6>
 				<div id="section-029" class="section" data-section-no="29">
 					<p>Les consonnes <em>ⲙ</em> <em>ⲛ</em> exigent après elles le changement de <em>ⲱ</em> en <em>ⲟⲩ</em>: <em>ⲛⲟⲩⲕ</em> «les tiens» et non <em>ⲛⲱⲕ</em> comme les formes similaires <em>ⲫⲱⲕ</em>, <em>ⲑⲱⲕ</em> «le tien, la tienne»; <em>ⲙⲟⲩⲣ</em> «lier», <em>ⲛⲟⲩⲧ</em> «moudre»; ces mots devraient selon la règle générale avoir un <em>ⲱ</em> comme les autres verbes bilitères <em>ⲃⲱⲗ</em>, <em>ⲕⲱⲧ</em>, etc.</p>
 					<p class="footnote">1. Dans un manuscrit de Turin, ce changement n'a pas toujours lieu; on y lit <em>ⲛ̀ⲙⲟⲓ</em>, <em>ⲛ̀ⲙⲱⲟⲩ</em>, <em>ⲛ̀ⲡⲉ</em> au lieu de <em>ⲙ̀ⲙⲟⲓ</em>, <em>ⲙ̀ⲙⲱⲟⲩ</em>, <em>ⲙ̀ⲡⲉ</em>, mais ce n'est là qu'une exception. Cf. Fr. Rossi, <i>Cinque manoscritti copti della Biblioteca nazionale di Torino</i>.</p>
@@ -894,7 +894,7 @@
 					<p><em>ⲛⲱⲧⲉⲛ</em> à vous.</p>
 					<p>Le même changement de <em>ⲱ</em> en <em>ⲟⲩ</em> a eu lieu quelquefois après <em>ϣ</em> et <em>ϫ</em>: <em>ϣⲟⲩϣⲧ</em> «trou», <em>ϫⲟⲩϣⲧ</em> «regarder».</p>
 				</div>
-				<h6 id="phonetique_d_ii_2">2. Sous l'influence d'une lettre qui suit.</h6>
+				<h6 id="lettre_qui_suit">2. Sous l'influence d'une lettre qui suit.</h6>
 				<div id="section-030" class="section" data-section-no="30">
 					<p>1. Devant <em>ϩ</em> <em>ϧ</em> et <em>ϣ</em> représentant la lettre égyptienne <i>ḫ</i> = <em class="ar">خ</em>, <em>ⲟ</em> se change en <em>ⲁ</em>:</p>
 					<p><em>ⲁϥ-ⲙⲁϩ-ϥ</em> il l'a rempli;</p>
@@ -914,8 +914,8 @@
 					<p>Il n'y a d'exception que pour <em>ⲉϩⲟⲟⲩ</em> «jour», son dérivé <em>ⲙ̀ⲫⲟⲟⲩ</em> «aujourd'hui» et <em>ⲧⲟⲟⲩⲓ</em> «matin».</p>
 					<p>Le Ṣaꜥidique retient <em>ⲟ</em>; on a donc B. <em>-ⲱⲟⲩ</em> = S. <em>-ⲟⲟⲩ</em>.</p>
 				</div>
-				<h4 id="phonetique_e_i">E. Des Trois États et des Trois Formes.</h4>
-				<h5 id="phonetique_e_ii">I. Définitions.</h5>
+				<h4 id="etats_et_formes">E. Des Trois États et des Trois Formes.</h4>
+				<h5 id="">I. Définitions.</h5>
 				<div id="section-033" class="section" data-section-no="33">
 					<p>De ce qui précède et surtout des paragraphes 14, 15, 17, 18, il ressort qu'un même mot peut avoir trois formes, selon qu'il se trouve dans trois états différents.</p>
 				</div>
@@ -946,7 +946,7 @@
 				<div id="section-039" class="section" data-section-no="39">
 					<p>Les trois formes ne sont pas nécessairement différentes l'une de l'autre. La forme pleine est parfois semblable à la forme avec suffixes: <em>ⲧⲁⲛϧⲟ́</em> <em>ⲧⲁⲛϧⲟ́⸗</em> «vivifier». Elle coïncide rarement avec la forme abrégée: <em>ϯ</em> <em>ϯ-</em> «donner». La forme abrégée peut aussi être la même que la forme avec suffixes: <em>ⲥⲟⲩⲉⲛ-</em> <em>ⲥⲟⲩⲉⲛ⸗</em> «prix».</p>
 				</div>
-				<h4 id="phonetique_f">F. Abréviations Usuelles.</h4>
+				<h4 id="abreviations_usuelles">F. Abréviations Usuelles.</h4>
 				<div id="section-040" class="section" data-section-no="40">
 					<p>Il est un certain nombre d'abréviations usitées par les Coptes eux-mêmes dans les manuscrits et par les modernes dans les éditions imprimées. On en trouvera à la fin de la grammaire le tableau complet. Voici les plus importantes:</p>
 					<p><em>ⲓ︤ⲏ︦ⲥ︥</em> <em>ⲓⲏⲥⲟⲩⲥ</em> Jésus,</p>
