--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -482,8 +482,8 @@
 				<p><b>Aboul-Barakat Chams ar-Ri'asat</b> <em class="ar">ابو البركات شمس الرئاسة المعروف بابن كبر</em> (vers 1300), auteur d'un grand vocabulaire copte-arabe intitulé <em class="ar">السلم المقترح</em> <i>l'échelle impromsée</i>.</p>
 				<p>De tous ces ouvrages, quatre ont été publiés par Kircher, <i>Lingua aegyptiaca restituta</i>; c'est la <i>préface</i> boḥairique d'Amba Yoḥanna de Samannoud, la <i>préface</i>, également boḥairique, d'Ibn Kâtib Qaiṣar, le vocabulaire d'Aboul-barakât Chams ar-Ri'âsat et celui d'Abou Ishâq ibn al-ꜥAssâl. Les autres sont inédits.</p>
 			</div>
-			<div id="phonology">
-				<h3 id="phonetique">1. Phonétique.</h3>
+			<div id="phonetique">
+				<h3>1. Phonétique.</h3>
 				<h4 id="alphabet">A. Alphabet.</h4>
 				<div id="section-001" class="section" data-section-no="1">
 					<p>L'alphabet copte comprend les vingt-quatre lettres de l'alphabet grec, plus sept lettres égyptiennes.</p>
@@ -814,9 +814,9 @@
 					<p><em>ⲡⲓⲣⲱⲙⲓ ⲉⲧⲉⲛϩⲟⲧ</em> «l'homme fidèle».</p>
 					<p>En Ṣaꜥidique la voyelle auxiliaire <em>ⲉ</em> est le plus souvent indiquée par un trait horizontal: <em>ⲙ̄ⲕⲁϩ</em>, <em>ⲛ̄ϩⲟⲧ</em>.</p>
 				</div>
-				<h4 id="changements">D. Changements de Lettres.</h4>
-				<h5 id="">I. Consonnes.</h5>
-				<h6 id="">1. Chute de consonnes finales.</h6>
+				<h4 id="changements_de_lettres">D. Changements de Lettres.</h4>
+				<h5 id="changements_de_consonnes">I. Consonnes.</h5>
+				<h6 id="chute_de_consonnes_finales">1. Chute de consonnes finales.</h6>
 				<div id="section-021" class="section" data-section-no="21">
 					<p>1. <i>r</i> final dans un mot égyptien a généralement disparu en copte. Les mots terminés en <i>ir</i> ou <i>er</i> présentent la finale <em>ⲓ</em> (S. <em>ⲉ</em>), et ceux en <i>or</i> la finale <em>ⲟ</em>:</p>
 					<p><em>ⲛⲟⲩϥⲓ</em> ég. <i>noúfir</i>,</p>
@@ -882,7 +882,7 @@
 					<p>6. Dans quelques mots on ajoute parfois un <em>ϩ</em> final sans changement de sens:</p>
 					<p><em>ϫⲱⲗ</em> <em>ϫⲱⲗϩ</em> «revêtir»; <em>ϭⲟ</em> <em>ϭⲟϩ</em> «dépenser».</p>
 				</div>
-				<h5 id="">II. Changements de voyelles.</h5>
+				<h5 id="changement_de_voyelles">II. Changements de voyelles.</h5>
 				<h6 id="consonne_qui_precede">1. Sous l'influence d'une consonne qui précède.</h6>
 				<div id="section-029" class="section" data-section-no="29">
 					<p>Les consonnes <em>ⲙ</em> <em>ⲛ</em> exigent après elles le changement de <em>ⲱ</em> en <em>ⲟⲩ</em>: <em>ⲛⲟⲩⲕ</em> «les tiens» et non <em>ⲛⲱⲕ</em> comme les formes similaires <em>ⲫⲱⲕ</em>, <em>ⲑⲱⲕ</em> «le tien, la tienne»; <em>ⲙⲟⲩⲣ</em> «lier», <em>ⲛⲟⲩⲧ</em> «moudre»; ces mots devraient selon la règle générale avoir un <em>ⲱ</em> comme les autres verbes bilitères <em>ⲃⲱⲗ</em>, <em>ⲕⲱⲧ</em>, etc.</p>
