--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -43,7 +43,7 @@
 								<li><a href="#syllabes">Des syllabes. <span>11–16</span></a>
 									<ol>
 										<li><a href="#en_elles_memes">Des syllabes en elles-mêmes. <span>12</span></a></li>
-										<li><a href="#dans les mots">Des syllabes dans les mots. <span>12</span></a></li>
+										<li><a href="#dans_les_mots">Des syllabes dans les mots. <span>12</span></a></li>
 										<li><a href="#nature_et_quantite">Nature et quantité de la voyelle formative et des voyelles auxiliaires. <span>14</span></a>
 											<ol>
 												<li><a href="#voyelle_formative">Voyelle formative. <span>14</span></a></li>
