--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -763,7 +763,7 @@
 					<p><em>ⲁϥ-ⲥⲟ́ⲗⲥⲉⲗ</em> il a consolé,</p>
 					<p><em>ⲁϥ-ⲥⲉⲗⲥⲉⲗ-ⲡⲉϥ-ⲥⲟ́ⲛ</em> il a consolé son frère.</p>
 				</div>
-				<h5 id="nature_et_quantitie">III. Nature et quantité de la voyelle formative et des voyelles auxiliaires.</h5>
+				<h5 id="nature_et_quantite">III. Nature et quantité de la voyelle formative et des voyelles auxiliaires.</h5>
 				<h6 id="voyelle_formative">1. Voyelle formative.</h6>
 				<div id="section-016" class="section" data-section-no="16">
 					<p>En règle générale la voyelle formative est longue dans les syllabes ouvertes et brève dans les syllabes fermées:</p>
