--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -815,7 +815,7 @@
 					<p>En Ṣaꜥidique la voyelle auxiliaire <em>ⲉ</em> est le plus souvent indiquée par un trait horizontal: <em>ⲙ̄ⲕⲁϩ</em>, <em>ⲛ̄ϩⲟⲧ</em>.</p>
 				</div>
 				<h4 id="changements_de_lettres">D. Changements de Lettres.</h4>
-				<h5 id="changements_de_consonnes">I. Consonnes.</h5>
+				<h5 id="consonnes">I. Consonnes.</h5>
 				<h6 id="chute_de_consonnes_finales">1. Chute de consonnes finales.</h6>
 				<div id="section-021" class="section" data-section-no="21">
 					<p>1. <i>r</i> final dans un mot égyptien a généralement disparu en copte. Les mots terminés en <i>ir</i> ou <i>er</i> présentent la finale <em>ⲓ</em> (S. <em>ⲉ</em>), et ceux en <i>or</i> la finale <em>ⲟ</em>:</p>
@@ -882,7 +882,7 @@
 					<p>6. Dans quelques mots on ajoute parfois un <em>ϩ</em> final sans changement de sens:</p>
 					<p><em>ϫⲱⲗ</em> <em>ϫⲱⲗϩ</em> «revêtir»; <em>ϭⲟ</em> <em>ϭⲟϩ</em> «dépenser».</p>
 				</div>
-				<h5 id="changement_de_voyelles">II. Changements de voyelles.</h5>
+				<h5 id="voyelles">II. Changements de voyelles.</h5>
 				<h6 id="consonne_qui_precede">1. Sous l'influence d'une consonne qui précède.</h6>
 				<div id="section-029" class="section" data-section-no="29">
 					<p>Les consonnes <em>ⲙ</em> <em>ⲛ</em> exigent après elles le changement de <em>ⲱ</em> en <em>ⲟⲩ</em>: <em>ⲛⲟⲩⲕ</em> «les tiens» et non <em>ⲛⲱⲕ</em> comme les formes similaires <em>ⲫⲱⲕ</em>, <em>ⲑⲱⲕ</em> «le tien, la tienne»; <em>ⲙⲟⲩⲣ</em> «lier», <em>ⲛⲟⲩⲧ</em> «moudre»; ces mots devraient selon la règle générale avoir un <em>ⲱ</em> comme les autres verbes bilitères <em>ⲃⲱⲗ</em>, <em>ⲕⲱⲧ</em>, etc.</p>
@@ -915,7 +915,7 @@
 					<p>Le Ṣaꜥidique retient <em>ⲟ</em>; on a donc B. <em>-ⲱⲟⲩ</em> = S. <em>-ⲟⲟⲩ</em>.</p>
 				</div>
 				<h4 id="etats_et_formes">E. Des Trois États et des Trois Formes.</h4>
-				<h5 id="">I. Définitions.</h5>
+				<h5 id="definitions">I. Définitions.</h5>
 				<div id="section-033" class="section" data-section-no="33">
 					<p>De ce qui précède et surtout des paragraphes 14, 15, 17, 18, il ressort qu'un même mot peut avoir trois formes, selon qu'il se trouve dans trois états différents.</p>
 				</div>
@@ -935,7 +935,7 @@
 					<p>Cette troisième forme, augmentée des suffixes personnels, peut encore être traitée comme forme pleine et comme forme abrégée, c'est-à-dire qu'elle ne porte pas toujours nécessairement l'accent tonique. Ceci a lieu dans les adjectifs et pronoms possessifs. Ainsi on a <em>ⲡⲉϥ-</em> «son» et <em>ⲫⲱ́ϥ</em> (24) «le sien»; <em>ⲡⲉϥ-</em> est la forme abrégée de <em>ⲫⲱϥ</em>. De même <em>ⲧⲉϥ-</em> «sa» et <em>ⲑⲱ́ϥ</em> (24) «la sienne»; <em>ⲛⲉϥ-</em> «ses» et <em>ⲛⲟⲩ́ϥ</em> (29) «les siens». Tous les verbes auxiliaires sont dans ce cas, avec cette différence qu'ils n'ont pas de forme pleine: <em>ⲛⲁⲣⲉ-</em> <em>ⲛⲁϥ-</em>; <em>ⲙⲁⲣⲉ-</em> <em>ⲙⲁⲣⲉϥ-</em>; <em>ⲁϥⲑⲣⲉϥ-</em> au lieu de <em>ⲁϥⲑⲣⲟ́ϥ</em>, <i>cf.</i> <em>ⲁϥⲧⲁⲗⲟϥ</em>.</p>
 					<p>Nous indiquerons ces formes avec suffixes, abrégées, au moyen du double signe <em>⸗-</em>: <em>ⲛ⸗-</em> sera l'adjectif possessif (74), <em>ⲛ⸗</em> la particule accentuée <em>ⲛⲏ́ⲓ</em> <em>ⲛⲁ́ⲕ</em> etc. «à moi, à toi» (61); <em>ⲛ̀ⲧ⸗-</em> sera l'auxiliaire du subjonctif <em>ⲛ̀ⲧⲁ-</em> <em>ⲛ̀ⲧⲉⲕ</em> etc.; <em>ⲛ̀ⲧ⸗</em>, la particule du génitif <em>ⲛ̀ⲧⲏ́ⲓ</em> <em>ⲛ̀ⲧⲁ́ⲕ</em> etc. (61).</p>
 				</div>
-				<h5>II. Importance des trois formes.</h5>
+				<h5 id="importance">II. Importance des trois formes.</h5>
 				<div id="section-037" class="section" data-section-no="37">
 					<p>La morphologie copte repose en grande partie sur l'emploi de ces trois formes. Elles s'étendent à presque toutes les parties du discours: articles, pronoms, noms, verbes, prépositions. Mais c'est dans les verbes qu'elles jouent le rôle le plus considérable. On les étudiera toutes en leur place; il suffira ici de faire quelques remarques générales.</p>
 				</div>
