--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -54,10 +54,10 @@
 								</li>
 								<li><a href="#changements_de_lettres">Changements de lettres. <span>16–20</span></a>
 									<ol>
-										<li><a href="#">Consonnes. <span>16–18</span></a>
+										<li><a href="#consonnes">Consonnes. <span>16–18</span></a>
 											<ol>
-												<li><a href="#">Chute de consonnes finales. <span>16</span></a></li>
-												<li><a href="#">Changements de consonnes. <span>17</span></a></li>
+												<li><a href="#chute_de_consonnes_finales">Chute de consonnes finales. <span>16</span></a></li>
+												<li><a href="#changements_de_consonnes">Changements de consonnes. <span>17</span></a></li>
 											</ol>
 										</li>
 										<li><a href="#">Voyelles. <span>18–20</span></a>
@@ -70,8 +70,8 @@
 								</li>
 								<li><a href="#etats_et_formes">Des trois états et des trois formes. <span>20–22</span></a>
 									<ol>
-										<li><a href="#">Définitions. <span>20</span></a></li>
-										<li><a href="#">Importance. <span>21</span></a></li>
+										<li><a href="#definitions">Définitions. <span>20</span></a></li>
+										<li><a href="#importance">Importance. <span>21</span></a></li>
 									</ol>
 								</li>
 								<li><a href="#abreviations_usuelles">Abréviations usuelles. <span>22–23</span></a></li>
