--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -37,7 +37,7 @@
 								<li><a href="#prononciation">Valeur et prononciation des lettres. <span>8–11</span></a>
 									<ol>
 										<li><a href="#consonnes">Consonnes. <span>8</span></a></li>
-										<li><a href="#voyelles">Voyelles et diphtongues. <span>10</span></a></li>
+										<li><a href="#voyelles_et_diphtongues">Voyelles et diphtongues. <span>10</span></a></li>
 									</ol>
 								</li>
 								<li><a href="#syllabes">Des syllabes. <span>11–16</span></a>
@@ -60,7 +60,7 @@
 												<li><a href="#changements_de_consonnes">Changements de consonnes. <span>17</span></a></li>
 											</ol>
 										</li>
-										<li><a href="#">Voyelles. <span>18–20</span></a>
+										<li><a href="#voyelles">Voyelles. <span>18–20</span></a>
 											<ol>
 												<li><a href="#consonne_qui_precede">Sous l'influence d'une consonne qui précède. <span>18</span></a></li>
 												<li><a href="#lettre_qui_suit">Sous l'influence d'une lettre qui suit. <span>19</span></a></li>
