--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -843,7 +843,7 @@
 					<p><em>ⲣⲟⲙⲡⲓ</em> ég. <i>rónpit</i>,</p>
 					<p><em>ⲫⲏⲟⲩⲓ</em> ég. <i>pḗwit</i>, pluriel de <em>ⲫⲉ</em> «ciel».</p>
 				</div>
-				<h6 id="">2. Changements de consonnes.</h6>
+				<h6 id="changements_de_consonnes">2. Changements de consonnes.</h6>
 				<div id="section-023" class="section" data-section-no="23">
 					<p>1. Devant les consonnes <em>ⲃ</em> <em>ⲗ</em> <em>ⲙ</em> <em>ⲛ</em> <em>ⲣ</em> et les semi-consonnés <em>ⲓ</em> <em>ⲟⲩ</em>, les trois fortes <em>ⲡ</em> <em>ⲕ</em> <em>ⲧ</em> se changent en leurs aspirées correspondantes <em>ⲫ</em> <em>ⲭ</em> <em>ⲑ</em>:</p>
 					<p><em>ⲫⲣⲏ</em> «le soleil» = <em>ⲡ</em> article + <em>ⲣⲏ</em>;</p>
@@ -882,7 +882,7 @@
 					<p>6. Dans quelques mots on ajoute parfois un <em>ϩ</em> final sans changement de sens:</p>
 					<p><em>ϫⲱⲗ</em> <em>ϫⲱⲗϩ</em> «revêtir»; <em>ϭⲟ</em> <em>ϭⲟϩ</em> «dépenser».</p>
 				</div>
-				<h5 id="voyelles">II. Changements de voyelles.</h5>
+				<h5 id="changements_de_voyelles">II. Changements de voyelles.</h5>
 				<h6 id="consonne_qui_precede">1. Sous l'influence d'une consonne qui précède.</h6>
 				<div id="section-029" class="section" data-section-no="29">
 					<p>Les consonnes <em>ⲙ</em> <em>ⲛ</em> exigent après elles le changement de <em>ⲱ</em> en <em>ⲟⲩ</em>: <em>ⲛⲟⲩⲕ</em> «les tiens» et non <em>ⲛⲱⲕ</em> comme les formes similaires <em>ⲫⲱⲕ</em>, <em>ⲑⲱⲕ</em> «le tien, la tienne»; <em>ⲙⲟⲩⲣ</em> «lier», <em>ⲛⲟⲩⲧ</em> «moudre»; ces mots devraient selon la règle générale avoir un <em>ⲱ</em> comme les autres verbes bilitères <em>ⲃⲱⲗ</em>, <em>ⲕⲱⲧ</em>, etc.</p>
