--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -695,7 +695,7 @@
 					<p><em>ϫ</em> = <i>dj</i>; cependant quelques Coptes le traitent comme <em class="ar">ج</em> arabe et le prononcent <i>g</i> dur.</p>
 					<p>Les liquides ont en copte la valeur habituelle.</p>
 				</div>
-				<h5 id="voyelles">2. Voyelles et Diphtongues.</h5>
+				<h5 id="voyelles_et_diphtongues">2. Voyelles et Diphtongues.</h5>
 				<div id="section-009" class="section" data-section-no="9">
 					<p>Il y a en copte sept voyelles:</p>
 					<p>trois brèves: <em>ⲁ</em> <em>ⲉ</em> <em>ⲟ</em></p>
